syntax = "proto3";
package kratos.api;

option go_package = "app/ws-gateway/internal/config;config";

import "server/config.proto";
import "client/config.proto";
import "google/protobuf/duration.proto";

// protoc -I. --proto_path=/Users/y.liu/go/src/github.com/lyouthzzz/ws-gateway/pkg --go_out=paths=source_relative:. app/ws-gateway/internal/config/config.proto

message Bootstrap {
  Server server = 1;
  Client client = 2;
  Data data = 3;
  Registry registry = 4;
}

message Server {
  server.Config http = 1;
  server.Config grpc = 2;
}

message Client {
  client.Config wsAPI = 1;
}

message Data {
  message Database {
    string driver = 1;
    string source = 2;
  }
  message Redis {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration read_timeout = 3;
    google.protobuf.Duration write_timeout = 4;
  }
  Database database = 1;
}

message Registry {
  message ETCD {
    string addr = 1;
    google.protobuf.Duration dialTimeout = 2;
  }
  ETCD etcd = 1;
}